fixed the responsiveness on mobile view

--- a/dash.css
+++ b/dash.css
@@ -23,7 +23,7 @@ body {
   min-height: 100vh;
 }
 .main-container {
-  width: clapm(350px, 80%, 400px);
+  width: clamp(350px, 80%, 400px);
   min-width: 250px;
   min-height: clamp(650px, 80%, 700px);
   display: flex;
